force-app/main/default/objects/Applied_Discount__c/Applied_Discount__c.object-meta.xml
<CustomObject>
    <description>Join object between Discount and Opportunity</description>
    <label>Applied Discount</label>
    <nameField>
        <displayFormat>AD-{00000}</displayFormat>
        <label>Applied Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applied Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>