force-app/main/default/objects/Applied_Discount__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <referenceTo>Discount__c</referenceTo>
    <relationshipLabel>Applied Discounts</relationshipLabel>
    <relationshipName>Applied_Discounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>