force-app/main/default/objects/Applied_Discount__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The invoice this discount is applied to.</description>
    <label>Invoice</label>
    <referenceTo>fw1__Invoice__c</referenceTo>
    <relationshipLabel>Applied Discounts</relationshipLabel>
    <relationshipName>Applied_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>