force-app/main/default/objects/Applied_Discount__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The opportunity this discount is applied to.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Applied Discounts</relationshipLabel>
    <relationshipName>Applied_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>